<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        app:title="@string/pref_header_general">

        <androidx.preference.ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_options"
            app:entryValues="@array/theme_values"
            app:key="@string/theme_preference_key"
            app:title="@string/pref_title_theme"
            app:summary="@string/pref_summary_theme" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:title="@string/pref_title_lang">

        <androidx.preference.ListPreference
            app:defaultValue="es"
            app:entries="@array/lang_options"
            app:entryValues="@array/lang_values"
            app:key="@string/lang_preference_key"
            app:title="@string/pref_title_lang"
            app:summary="@string/pref_summary_lang" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>